libhocr (0.10.4)

 * change licence to GPL3
 * fine tune options for segmentation functions
 * fine tune reading order functions
 * remove web interface
 * fix pbm load bug (patch: Mikael Ylikoski <ordbrand@gmail.com>)
 * add rotation functions
 * re-add examples (hocr example requers gtk)
 * re-add python bindings (now requires gtk)

 -- Yaacov Zamir <kzamir_at_walla.co.il>  Monday, 14 May 2007 18:12
 
libhocr (0.10.3)

 * font segmentation functions
 * font recognition functions
 
 -- Yaacov Zamir <kzamir_at_walla.co.il>  Monday, 4 March 2007 12:02

libhocr (0.10.2)

 * paragraph segmentation functions
 * line segmentation functions
 * word segmentation functions
 * reading order sorting functions
 * add php web interface 
 
 -- Yaacov Zamir <kzamir_at_walla.co.il>  Thursday, 15 February 2007 19:12
 
libhocr (0.10.1)

 * internal image loader can load pnm P6, P5, P4 images
 * internal image saver can save pnm P6, P5 images
 * new functions for color and gray scale images 
 * gtk related functions move to libhocrgtk

 -- Yaacov Zamir <kzamir_at_walla.co.il>  Tuesday, 16 Jan 2007 20:10

libhocr (0.10.0)

 * new API
 * a code cleanup (re-write of most of the code):
    re-write of object/struct definitions.
    re-write of the segmentation and recognition functions.
    re-write of the input-output functions.
    file re-organization and naming.
 * temporarily remove bindings and examples.
 * hocr command line utility requires gtk for input and output
 
 -- Yaacov Zamir <kzamir_at_walla.co.il>  Sun, 25 Jun 2006 22:13

hocr (0.8.2)

 * change g_file_set_contents to simple fprintf call in file 
   examples/hocr-gtk/callbacks.c
 * add hspell backend to hocr_textbuffer
 * add glib's Character Set Conversion support to hocr_textbuffer
 * add glib's File save support to hocr_textbuffer
 * add gtk's open/save picture files to hocr_pixbuf.
 * default brightness is 128 now
 * new and preetier logo by Shlomi
 * Daniel Nylander: swedish Swedish translation of hocr-gtk
 