@@ -1,3 +1,10 @@
+libhocr (0.10.5)
+
+ * fine tune font recognition
+ * add hocr-gtk example
+
+ -- Yaacov Zamir <kzamir_at_walla.co.il>  Saturday, 26 Jan 2008 21:04
+
 libhocr (0.10.4)
 
  * change licence to GPL3
